--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="horizontal"
         android:background="@color/color_background"
         android:layout_width="match_parent"
@@ -14,7 +14,8 @@
             android:padding="10dp"
             android:src="@drawable/ic_placeholder"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline1" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -30,7 +31,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
@@ -54,7 +56,7 @@
     <TextView
             android:id="@+id/genres_text_view"
             android:text="Action Drama Comedy"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/light_gray"
             android:textSize="16dp"
@@ -65,7 +67,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/year_text_view"
             android:layout_marginStart="8dp"
-    />
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
     <View
             android:layout_width="match_parent"
