--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -12,7 +12,6 @@
             android:id="@+id/movie_poster"
             android:layout_width="65dp"
             android:padding="10dp"
-            android:src="@drawable/ic_placeholder"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="@+id/guideline1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -45,13 +44,16 @@
             android:maxLines="1"
             android:maxLength="4"
             android:layout_marginStart="16dp"
-            app:layout_goneMarginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/genres_text_view"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/genres_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="1.0"
-    />
+            app:layout_constraintEnd_toStartOf="@+id/genres_text_view"
+            app:layout_constraintHorizontal_bias="0.5"/>
 
     <TextView
             android:id="@+id/genres_text_view"
@@ -64,11 +66,13 @@
             android:maxLength="40"
             android:ellipsize="end"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_goneMarginStart="16dp"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintStart_toEndOf="@+id/year_text_view"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
             android:layout_width="match_parent"
