--- a/app/src/main/res/layout/activity_single_actor.xml
+++ b/app/src/main/res/layout/activity_single_actor.xml
@@ -26,13 +26,55 @@
                 app:titleEnabled="false">
 
             <ImageView
-                    android:id="@+id/person_image"
+                    android:id="@+id/person_profile_blurred"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_collapseParallaxMultiplier="0.75"
                     android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
                     tools:ignore="ContentDescription"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/person_profile"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        app:civ_border_width="1dp"
+                        app:civ_border_color="@color/light_gray"
+                        android:layout_gravity="center"/>
+
+                <TextView
+                        android:id="@+id/person_name"
+                        android:textColor="@color/color_text"
+                        android:text="James May"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/person_pob"
+                        android:textColor="@color/color_text"
+                        android:text="Houston - Texas - USA"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/person_movies"
+                        android:textColor="@color/color_text"
+                        android:text="71 movies"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
