--- a/app/src/main/res/layout/single_actor_movies_fragment.xml
+++ b/app/src/main/res/layout/single_actor_movies_fragment.xml
@@ -11,15 +11,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/actor_biography"
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/actor_movies_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/color_text"
-                android:text="Hello"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
