--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -114,13 +114,11 @@
                 app:layout_constraintTop_toBottomOf="@id/buttons_group"
                 app:layout_constraintStart_toStartOf="@id/guideline2"/>
 
-        <TextView
+        <ImageView
                 android:id="@+id/imdb_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_text"
-                android:textStyle="bold"
-                android:textSize="24dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/imdb_logo"
                 app:layout_constraintBottom_toTopOf="@id/guideline4"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@id/imdb_placeholder"/>
