--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -56,7 +56,7 @@
                 app:layout_constraintEnd_toStartOf="parent">
 
             <ImageButton
-                    android:id="@+id/button2"
+                    android:id="@+id/trailer_button"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_play"
@@ -76,7 +76,7 @@
                     android:background="@android:color/transparent"
                     app:layout_constraintTop_toTopOf="@id/buttons_group"
                     app:layout_constraintBottom_toBottomOf="@id/buttons_group"
-                    app:layout_constraintStart_toEndOf="@+id/button2"
+                    app:layout_constraintStart_toEndOf="@+id/trailer_button"
                     app:layout_constraintEnd_toStartOf="@+id/button3"/>
             <ImageButton
                     android:id="@+id/button3"
