--- a/app/src/main/res/layout/single_person_movies_fragment.xml
+++ b/app/src/main/res/layout/single_person_movies_fragment.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_background"
-        tools:context=".screens.singleActor.biography.SingleActorBiographyFragment">
+        tools:context=".screens.singlePerson.biography.SingleActorBiographyFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
