--- a/app/src/main/res/layout/my_list_movie_item.xml
+++ b/app/src/main/res/layout/my_list_movie_item.xml
@@ -37,10 +37,10 @@
     </FrameLayout>
 
     <FrameLayout
+            android:id="@+id/movie_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true">
+            android:clickable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:background="@color/color_background"
