--- a/app/src/main/res/layout/layout_custom_snackbar.xml
+++ b/app/src/main/res/layout/layout_custom_snackbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.stameni.com.whatshouldiwatch.common.CustomSnackbarView
+<com.stameni.com.whatshouldiwatch.common.libraries.CustomSnackbarView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:padding="8dp"
         android:layout_width="match_parent"
