--- a/app/src/main/res/layout/my_watched_movie_item.xml
+++ b/app/src/main/res/layout/my_watched_movie_item.xml
@@ -1,141 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<com.stameni.com.moviebrowser.common.libraries.SwipeRevealLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center_vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:dragFromEdge="right">
+<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_reveal_layout"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:layout_gravity="center_vertical"
+    app:dragFromEdge="right">
 
     <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
         <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|end"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|end"
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp">
 
             <Button
-                    android:id="@+id/to_watch_button"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/ic_watch_later"/>
+                android:id="@+id/to_watch_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/ic_watch_later" />
 
             <Button
-                    android:id="@+id/delete_button"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/ic_delete"/>
+                android:id="@+id/delete_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/ic_delete" />
 
         </LinearLayout>
     </FrameLayout>
 
     <FrameLayout
-            android:id="@+id/movie_root"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true">
+        android:id="@+id/movie_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:background="@color/color_background"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/color_background"
+            android:foreground="?android:attr/selectableItemBackground">
 
             <ImageView
-                    android:id="@+id/movie_poster"
-                    android:layout_width="64dp"
-                    android:padding="10dp"
-                    android:layout_height="match_parent"
-                    app:layout_constraintStart_toStartOf="@+id/guideline1"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                android:id="@+id/movie_poster"
+                android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline1"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                    android:id="@+id/movie_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_text"
-                    android:textSize="16dp"
-                    android:maxLines="1"
-                    android:maxLength="40"
-                    android:ellipsize="end"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                    app:layout_constraintHorizontal_bias="0.0"/>
-            <TextView
-                    android:id="@+id/year_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_text"
-                    android:textSize="16dp"
-                    android:maxLines="1"
-                    android:maxLength="4"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="24dp"
-                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
-                    app:layout_constraintHorizontal_chainStyle="spread_inside"
-                    app:layout_constraintTop_toTopOf="@+id/genres_text_view"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="1.0"
-                    app:layout_constraintEnd_toStartOf="@+id/genres_text_view"
-                    app:layout_constraintHorizontal_bias="0.5"/>
+                android:id="@+id/movie_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:textColor="@color/color_text"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/movie_poster"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                    android:id="@+id/genres_text_view"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/light_gray"
-                    android:textSize="16dp"
-                    android:maxLines="1"
-                    android:maxLength="40"
-                    android:ellipsize="end"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_goneMarginStart="16dp"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                    app:layout_constraintStart_toEndOf="@+id/year_text_view"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                android:id="@+id/year_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="24dp"
+                android:maxLength="4"
+                android:maxLines="1"
+                android:textColor="@color/color_text"
+                android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/genres_text_view"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toEndOf="@+id/movie_poster"
+                app:layout_constraintTop_toTopOf="@+id/genres_text_view"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <TextView
+                android:id="@+id/genres_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="24dp"
+                android:ellipsize="end"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:textColor="@color/light_gray"
+                android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/year_text_view"
+                app:layout_goneMarginStart="16dp" />
 
             <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/dark_gray"
-                    android:layout_marginStart="80dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/view"/>
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="80dp"
+                android:background="@color/dark_gray"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintGuide_begin="8dp"
-                    android:id="@+id/guideline1"/>
+                android:id="@+id/guideline1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="8dp" />
 
             <androidx.constraintlayout.widget.Guideline
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/guideline6"
-                    app:layout_constraintGuide_end="8dp"/>
+                android:id="@+id/guideline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="8dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 
-</com.stameni.com.moviebrowser.common.libraries.SwipeRevealLayout>
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
